--- a/public/base.html
+++ b/public/base.html
@@ -11,18 +11,18 @@
   </head>
   <body>
     <header>
-      <div class="header-container">
+      <div class="header container">
           <a class="logo" href="/">AskMe</a>
           <div class="search-bar">
-            <input type="text" placeholder="Search..." class="search-input px24"><button class="ask-button px24">Ask</button>
+            <input type="text" placeholder="Search..." class="search-input px24"><button class="ask-button px24">Ask!</button>
           </div>
           <div class="user-data">
             <img height="55" src="https://placehold.co/200" alt="user image">
             <div class="user-actions">
               <p>Username</p>
               <span>
-                <a>settings</a>
-                <a>log out</a>
+                <a href="/settings.html">settings</a>
+                <a href="/logout.html">log out</a>
               </span>
 
             </div>
@@ -30,11 +30,51 @@
       </div>
     </header>
     <main>
-      <div class="cards-container">
+      <div class="cards container">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean aliquet non nulla in faucibus. Sed urna metus, ultricies in posuere nec, placerat vel leo. Etiam varius dolor mattis ipsum aliquam, eu dictum mauris commodo. Nullam scelerisque tellus nisi, ac faucibus tortor aliquam ac. Donec lacinia sit amet neque vitae tincidunt. Nulla lorem dui, tristique at finibus at, volutpat eu ante. Ut sollicitudin maximus tortor, molestie semper turpis ornare et. Aliquam auctor posuere pulvinar. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Fusce ut egestas est, vel tristique felis. Phasellus pulvinar arcu vitae turpis sagittis, aliquet laoreet neque faucibus. Aenean dapibus ac odio ac commodo. Donec vitae molestie purus. Duis lacinia nisl justo, at ornare turpis finibus nec. Donec vel est dolor.
+Maecenas tristique ante a tempor euismod. Nam mollis condimentum lorem eu mattis. Ut dictum commodo purus, a semper nulla efficitur nec. Donec sed feugiat orci, ut dignissim metus. Aliquam vitae tortor nec tellus malesuada tristique quis non ipsum. Proin consequat mi velit, id mattis nisi pellentesque quis. In tempor, ipsum vel pellentesque vehicula, sem neque ullamcorper massa, vel laoreet arcu ex in neque. Morbi placerat ipsum quis ante egestas malesuada. Etiam fermentum tortor sodales interdum dapibus.
 
+Aenean faucibus dignissim est. Donec nec ligula sit amet justo cursus suscipit. Nullam lobortis, ante quis elementum viverra, mi massa maximus risus, sit amet suscipit eros nunc quis nisl. Ut tellus elit, pretium quis augue iaculis, commodo commodo orci. Aliquam bibendum, tortor ut bibendum gravida, mi nisi tincidunt ex, id molestie tortor quam eu massa. Sed rutrum urna sit amet elementum vehicula. Vivamus vel varius dolor.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean aliquet non nulla in faucibus. Sed urna metus, ultricies in posuere nec, placerat vel leo. Etiam varius dolor mattis ipsum aliquam, eu dictum mauris commodo. Nullam scelerisque tellus nisi, ac faucibus tortor aliquam ac. Donec lacinia sit amet neque vitae tincidunt. Nulla lorem dui, tristique at finibus at, volutpat eu ante. Ut sollicitudin maximus tortor, molestie semper turpis ornare et. Aliquam auctor posuere pulvinar. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Fusce ut egestas est, vel tristique felis. Phasellus pulvinar arcu vitae turpis sagittis, aliquet laoreet neque faucibus. Aenean dapibus ac odio ac commodo. Donec vitae molestie purus. Duis lacinia nisl justo, at ornare turpis finibus nec. Donec vel est dolor.
+
+Maecenas tristique ante a tempor euismod. Nam mollis condimentum lorem eu mattis. Ut dictum commodo purus, a semper nulla efficitur nec. Donec sed feugiat orci, ut dignissim metus. Aliquam vitae tortor nec tellus malesuada tristique quis non ipsum. Proin consequat mi velit, id mattis nisi pellentesque quis. In tempor, ipsum vel pellentesque vehicula, sem neque ullamcorper massa, vel laoreet arcu ex in neque. Morbi placerat ipsum quis ante egestas malesuada. Etiam fermentum tortor sodales interdum dapibus.
+
+Aenean faucibus dignissim est. Donec nec ligula sit amet justo cursus suscipit. Nullam lobortis, ante quis elementum viverra, mi massa maximus risus, sit amet suscipit eros nunc quis nisl. Ut tellus elit, pretium quis augue iaculis, commodo commodo orci. Aliquam bibendum, tortor ut bibendum gravida, mi nisi tincidunt ex, id molestie tortor quam eu massa. Sed rutrum urna sit amet elementum vehicula. Vivamus vel varius dolor.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean aliquet non nulla in faucibus. Sed urna metus, ultricies in posuere nec, placerat vel leo. Etiam varius dolor mattis ipsum aliquam, eu dictum mauris commodo. Nullam scelerisque tellus nisi, ac faucibus tortor aliquam ac. Donec lacinia sit amet neque vitae tincidunt. Nulla lorem dui, tristique at finibus at, volutpat eu ante. Ut sollicitudin maximus tortor, molestie semper turpis ornare et. Aliquam auctor posuere pulvinar. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Fusce ut egestas est, vel tristique felis. Phasellus pulvinar arcu vitae turpis sagittis, aliquet laoreet neque faucibus. Aenean dapibus ac odio ac commodo. Donec vitae molestie purus. Duis lacinia nisl justo, at ornare turpis finibus nec. Donec vel est dolor.
+
+Maecenas tristique ante a tempor euismod. Nam mollis condimentum lorem eu mattis. Ut dictum commodo purus, a semper nulla efficitur nec. Donec sed feugiat orci, ut dignissim metus. Aliquam vitae tortor nec tellus malesuada tristique quis non ipsum. Proin consequat mi velit, id mattis nisi pellentesque quis. In tempor, ipsum vel pellentesque vehicula, sem neque ullamcorper massa, vel laoreet arcu ex in neque. Morbi placerat ipsum quis ante egestas malesuada. Etiam fermentum tortor sodales interdum dapibus.
+
+Aenean faucibus dignissim est. Donec nec ligula sit amet justo cursus suscipit. Nullam lobortis, ante quis elementum viverra, mi massa maximus risus, sit amet suscipit eros nunc quis nisl. Ut tellus elit, pretium quis augue iaculis, commodo commodo orci. Aliquam bibendum, tortor ut bibendum gravida, mi nisi tincidunt ex, id molestie tortor quam eu massa. Sed rutrum urna sit amet elementum vehicula. Vivamus vel varius dolor.
       </div>
       <aside>
-
+        <div class="popular-tags container">
+          <h2>Popular Tags</h2>
+          <div class="tags">
+            <span>history</span>
+            <span>history</span>
+            <span>history</span>
+            <span>history</span>
+            <span>history</span>
+            <span>history</span>
+            <span>history</span>
+            <span>history</span>
+            <span>history</span>
+            <span>history</span>
+            <span>history</span>
+          </div>
+        </div>
+        <div class="best-members container">
+          <h2>Best Members</h2>
+          <ul>
+            <li>user 1</li>
+            <li>user 1</li>
+            <li>user 1</li>
+            <li>user 1</li>
+            <li>user 1</li>
+            <li>user 1</li>
+            <li>user 1</li>
+          </ul>
+          <div class="members">
+          </div>
+        </div>
       </aside>
     </main>
   </body>
