--- a/public/base.html
+++ b/public/base.html
@@ -17,7 +17,7 @@
             <input type="text" placeholder="Search..." class="search-input px24"><button class="ask-button px24">Ask!</button>
           </div>
           <div class="user-data">
-            <img height="55" src="https://placehold.co/200" alt="user image">
+            <img height="55" width="55" src="https://placehold.co/200" alt="user image">
             <div class="user-actions">
               <p>Username</p>
               <span>
