--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
             <input type="text" placeholder="Search..." class="search-input px24"><button class="ask-button px24">Ask!</button>
           </div>
           <div class="user-data">
-            <img height="55" src="https://placehold.co/200" alt="user image">
+            <img height="55" width="55" src="https://placehold.co/200" alt="user image">
             <div class="user-actions">
               <p>Username</p>
               <span>
@@ -37,7 +37,7 @@
         <div class="question-card container">
             <div class="avatar-and-description">
                 <div class="image-like-container">
-                <img height="80" src="https://placehold.co/500" alt="user image">
+                <img height="80" width="80" src="https://placehold.co/500" alt="user image">
                     <div class="likes">
                         <div class="number">-1233</div>
                         <div class="arrows-container">
@@ -65,7 +65,7 @@
         <div class="question-card container">
             <div class="avatar-and-description">
                 <div class="image-like-container">
-                <img height="80" src="https://placehold.co/500" alt="user image">
+                <img height="80" width="80" src="https://placehold.co/500" alt="user image">
                     <div class="likes">
                         <div class="number">5</div>
                         <div class="arrows-container">
@@ -93,7 +93,7 @@
         <div class="question-card container">
             <div class="avatar-and-description">
                 <div class="image-like-container">
-                <img height="80" src="https://placehold.co/500" alt="user image">
+                <img height="80" width="80"  src="https://placehold.co/500" alt="user image">
                     <div class="likes">
                         <div class="number">71</div>
                         <div class="arrows-container">
@@ -121,7 +121,7 @@
         <div class="question-card container">
             <div class="avatar-and-description">
                 <div class="image-like-container">
-                <img height="80" src="https://placehold.co/500" alt="user image">
+                <img height="80" width="80" src="https://placehold.co/500" alt="user image">
                     <div class="likes">
                         <div class="number">0</div>
                         <div class="arrows-container">
