--- a/public/ask.html
+++ b/public/ask.html
@@ -35,18 +35,21 @@
             <h1>New Question</h1>
         </div>
           <div class="cards container">
-            <div class="input-tag">
-                <h3>Title</h3>
-                <input placeholder="Your question's title...">
-            </div>
-            <div class="input-tag">
-                <h3 class="fixed-top">Text</h3>
-                <textarea rows="10" placeholder="Ask your question..."></textarea>
-            </div>
-            <div class="input-tag">
-                <h3>Tags</h3>
-                <input placeholder="Tags for your question...">
-            </div>
+            <form action="">
+              <div class="input-field">
+                <label for="title">Title</label>
+                <input type="text" id="title" placeholder="Title...">
+              </div>
+              <div class="input-field">
+                <label for="description" class="fixed-top textarea-label">Text</label>
+                <textarea type="text" id="description" rows="10" placeholder="What's your question?"></textarea>
+              </div>
+              <div class="input-field">
+                <label for="tags">Tags</label>
+                <input type="text" id="tags" placeholder="Your Question's tags...">
+              </div>
+              <button class="ask-button-question  ">Ask!</button>
+            </form>
           </div>
     </div>
       <aside>
