--- a/public/ask.html
+++ b/public/ask.html
@@ -38,7 +38,7 @@
             <form action="">
               <div class="input-field">
                 <label for="title">Title</label>
-                <input type="text" id="title" placeholder="Title...">
+                <input type="text" id="title" placeholder="Your question's title...">
               </div>
               <div class="input-field">
                 <label for="description" class="fixed-top textarea-label">Text</label>
@@ -48,6 +48,7 @@
                 <label for="tags">Tags</label>
                 <input type="text" id="tags" placeholder="Your Question's tags...">
               </div>
+              <p class="error">Your question must have a title.</p>
               <button class="ask-button-question  ">Ask!</button>
             </form>
           </div>
