question.html nearly done && fixes

--- a/public/index.html
+++ b/public/index.html
@@ -105,7 +105,7 @@
                 <div class="description-actions">
                     <div class="description">
                         <h2>Does anybody else have this annoying error?</h2>
-                        <p>It says that there is "insufficient funds" on my credit card when I try to pay for ten billion robux...</p>
+                        <p>It says that there is "insufficient funds" on my credit card when I try to buy one billion...</p>
                     </div>
                     <div class="actions-and-tags">
                         <a href="">Answer (12)</a>
@@ -182,8 +182,6 @@
             <li>user 1</li>
             <li>user 1</li>
           </ul>
-          <div class="members">
-          </div>
         </div>
       </aside>
     </main>
