question.html finished + pagination style changed

--- a/public/question.html
+++ b/public/question.html
@@ -83,9 +83,7 @@
                         </div>
                         <div class="answer-actions">
                             <div class="description">
-                                <h2>How to fix broken HDD?</h2>
-                                <p>I raged after playing this game and I threw my disk into a wall and now my pc won't
-                                    boot...</p>
+                                <p>Honestly, your situation seems hopeless. My best wishes to you. If you somehow manage not to get fired, please tell me how.</p>
                                 <div class="correct-checkbox">
                                     <input type="checkbox">
                                     <span>Correct</span>
@@ -109,16 +107,18 @@
                     </div>
                     <div class="answer-actions">
                         <div class="description">
-                            <h2>How to fix broken HDD?</h2>
-                            <p>I raged after playing this game and I threw my disk into a wall and now my pc won't
-                                boot...</p>
+                            <p>You should look for backups as soon as possible. Some of them might be fresh enough so that nobody notices if you use the backup database instead of the real one.</p>
                             <div class="correct-checkbox">
-                                <input type="checkbox">
+                                <input checked type="checkbox">
                                 <span>Correct</span>
                             </div>
                         </div>
                     </div>
                 </div>
+            </div>
+            <div class="user-answer">
+                <textarea rows="5" placeholder="Answer here..."></textarea>
+                <button class="answer-button">Answer!</button>
             </div>
         </div>
         </div>
