--- a/public/index.html
+++ b/public/index.html
@@ -147,7 +147,7 @@
             </div>
         </div>
         <div class="pages container">
-            <div class="page"><a href="">1</a></div>
+            <div class="page"><a href="" class="current">1</a></div>
             <div class="page"><a href="">2</a></div>
             <div class="page"><a href="">3</a></div>
             <div class="page"><a href="">...</a></div>
