added pagination to question.html

--- a/public/question.html
+++ b/public/question.html
@@ -35,6 +35,7 @@
         </div>
     </header>
     <main>
+        <div class="all-cards">
         <div class="cards container">
             <div class="common-container">
                 <div class="description-actions">
@@ -121,8 +122,16 @@
                 <button class="answer-button">Answer!</button>
             </div>
         </div>
+        <div class="pages container">
+            <div class="page"><a href="" class="current">1</a></div>
+            <div class="page"><a href="">2</a></div>
+            <div class="page"><a href="">3</a></div>
+            <div class="page"><a href="">...</a></div>
+            <div class="page"><a href="">100</a></div>
         </div>
         </div>
+        </div>
+    </div>
         <aside>
             <div class="popular-tags container">
                 <h2>Popular Tags</h2>
