--- a/public/login.html
+++ b/public/login.html
@@ -38,16 +38,17 @@
             <form action="">
                 <div class="input-field">
                     <label for="username">Username</label>
-                    <input type="text" id="username" placeholder="Username...">
+                    <input type="text" id="username">
                 </div>
                 <div class="input-field">
                     <label for="password">Password</label>
-                    <input type="password" id="password" placeholder="Password...">
+                    <input type="password" id="password">
                 </div>
                 <div class="error">
                     <p>Incorrect credentials.</p>
                 </div>
                 <button class="login-button">Log In</button>
+                <p style="text-align: center; margin-bottom: 0;">Not registered yet? <a class="sign-up-link">Sign Up!</a></p>
             </form>
         </div>
       </div>
