signup and settings done, minor changes

--- a/public/base.html
+++ b/public/base.html
@@ -12,7 +12,7 @@
   <body>
     <header>
       <div class="header container">
-          <a class="logo" href="/">AskMe</a>
+          <a class="logo" href="index.html">AskMe</a>
           <div class="search-bar">
             <input type="text" placeholder="Search..." class="search-input px24"><button class="ask-button px24">Ask!</button>
           </div>
@@ -21,8 +21,8 @@
             <div class="user-actions">
               <p>Username</p>
               <span>
-                <a href="/settings.html">settings</a>
-                <a href="/logout.html">log out</a>
+                <a href="settings.html">settings</a>
+                <a href="logout.html">log out</a>
               </span>
             </div>
           </div>
