--- a/public/settings.html
+++ b/public/settings.html
@@ -30,23 +30,33 @@
     <main>
       <div class="cards">
         <div class="login-header">
-            <h1>Log In</h1>
+            <h1>Settings</h1>
         </div>
         <div class="login container">
-            <form action="" method="post" enctype="application/x-www-form-urlencoded">
+            <form action="" method="post" enctype="multipart/form-data">
                 <div class="input-field">
                     <label for="login">Login</label>
                     <input type="text" id="login">
                 </div>
                 <div class="input-field">
-                    <label for="password">Password</label>
-                    <input type="password" id="password">
+                    <label for="email">Email</label>
+                    <input type="email" id="email">
                 </div>
-                <div class="error">
-                    <p>Incorrect credentials.</p>
+                <div class="input-field">
+                    <label for="nickname">Nickname</label>
+                    <input type="text" id="nickname">
                 </div>
-                <button class="login-button">Log In</button>
-                <p style="text-align: center; margin-bottom: 0;">Not registered yet? <a href="signup.html" class="sign-up-link">Sign Up!</a></p>
+                <div class="input-field">
+                    <label for="password">Upload avatar</label>
+                    <div class="file-image-container">
+                        <img height="90" width="90" src="https://placehold.co/200">
+                        <div class="file-load-container">
+                            <input type="file" accept=".jpg,.png,.jpeg" id="password">
+                            <button>Upload</button>
+                        </div>
+                    </div>
+                </div>
+                <button class="login-button">Save changes</button>
             </form>
         </div>
       </div>
