log in button margin doubled

--- a/public/login.html
+++ b/public/login.html
@@ -18,7 +18,7 @@
             <input type="text" placeholder="Search..." class="search-input px24"><button class="ask-button px24">Ask!</button>
           </div>
           <div class="user-data">
-            <div class="user-actions">
+            <div class="user-actions unsigned">
               <span>
                 <a href="login.html">log in</a>
                 <a href="signup.html">register</a>
